Create htaccess file and build directory

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Guess who has more Instagram followers!" />
+    <meta name="description" content="Guess who has more/less Instagram followers!" />
 
-    <title>More Or Less Followers — Guess Who Has More Instagram Followers!</title>
+    <title>More Or Less Followers — Guess Who Has More/Less Instagram Followers!</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
